@@ -5,6 +5,7 @@ Dependencies:
   None
 
 New releases:
+ 2018/06/06 Version 4.2.1
  2018/06/04 Version 4.2.0
  2018/05/09 Version 4.1.1
  2018/05/07 Version 4.1.0
